methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:3: error: not found: value isFacingTRail
    if (isFacingTRail()){
        ^